modified alignments viewport width solved

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body {
   background-image: url('./back.jpg');
   background-size: cover;
   background-attachment: fixed;
+  width:  auto;
 
 }
 
